@@ -1,0 +1,26 @@
+
+<h1>Select your Game!</h1>
+<div class="row">
+  <div class="col-lg-6">
+    <div class="questions nba img-rounded">
+      <h1>NBA Finals 2017</h1>
+    </div>
+  </div>
+  <div class="col-lg-6">
+    <div class="questions nhl img-rounded">
+      <h1>Stanely Cup Playoffs 2017</h1>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-lg-6">
+    <div class="questions mlb img-rounded">
+      <h1>MLB 2017</h1>
+    </div>
+  </div>
+  <div class="col-lg-6">
+    <div class="questions cst img-rounded">
+      <h1>Custom Questions</h1>
+    </div>
+  </div>
+</div>
