@@ -23,3 +23,4 @@ Changelog
 + Scaffolded Games
 + Linked games and creators
 + if user is signed in, their games display
++ added game select screen
